--- a/css/index.css
+++ b/css/index.css
@@ -151,4 +151,52 @@ button:hover{
         margin: 0 5%;
         padding:0;
     }  
+
+    .title-container{
+        width:100%;
+    }
+    .title-container div{	
+        background-position: 40% 60%;
+        width:100%;
+        margin:5% 0; 
+        margin-bottom: 1.5%;
+        height: auto;
+        padding-bottom: 15%;
+    }
+    .title-container h1{
+        font-size:4rem;
+        line-height: 100%;
+        padding-top:20%;
+    }
+    .title-container button{
+        margin-top: 1%;
+    }
+    .title-container hr{
+        width:100%;
+    }
+
+    .artists-container{
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+        width:100%;
+    }
+    .artist{
+        width:100%;
+        display:flex;
+        flex-direction:column;
+        align-items:center;
+    }
+    .artists-container a{
+        font-size: 1.3rem;
+    }
+    .bio{
+        font-size:.8rem;
+        width: 60%;
+    }
+    .artist img{
+        width:40%;
+        height:auto;
+    }
 }
